# grappa

./: .gitignore  .gitmodules  Building.org  README.md  build.sh  default.nix  grappa.cabal  shell.nix  stack-ghc-7.10.yaml  stack-ghc-8.0.yaml  stack-ghc-8.4.yaml
c-printer-test/: Main.hs
cbits/: optimize_lbfgs.cpp
docker/: .gitignore  Dockerfile  README.md  SHA256SUMS  config  get-ghc  known_hosts
examples/: DPM.grappa  Regression.grappa  SAGA.grappa  categorical-anom.grappa  categorical-single.grappa  hmm-matrix-gamma.grappa  hmm-matrix-normal.grappa  hmm.grappa  hmm2.grappa  hmm3.grappa  hmm_data1.json  hmm_data2.json  hmm_simple.grappa  poisson-noisy.grappa  poisson.grappa  poisson2.grappa  poisson_interarrivals.grappa  poisson_interarrivals.rate0.1.json  poisson_interarrivals.rate1.json  poisson_interarrivals.rate100.json  regression.csv
examples/.hmm-project/: Main.hs  grappa-compile-log  grappa-main.cabal  stack.yaml
examples/adidrus-data/: benign.buckets.model  benign.json  malicious.buckets.model  malicious.json  pt_boot_data.grappa
grappa/: Main.hs
grappa-build/: DummyBuildMain.hs
grappa-c/: CabalBld.hs  Main.hs  StackBld.hs
nix/: configs.nix  lbfgspp.nix
src/Language/: Grappa.hs
src/Language/Grappa/: Distribution.hs  GrappaInternals.hs  Inference.hs  Interp.hs  Model.hs
src/Language/Grappa/Frontend/: AST.hs  Compile.hs  DataSource.hs  Errors.hs  FixupOps.hs  IngestEmitType.hs  Lexer.x  Matching.hs  Parser.y  Resolve.hs  TypeCheck.hs
src/Language/Grappa/Inference/: BayesNetInference.hs  CPrinter.hs  CTranslate.hs  GradientDescent.hs  HMC.hs  OldVariationalInference.hs  Util.hs  VariationalInference.hs
src/Language/Grappa/Interp/: ADHORepr.hs  BayesNet.hs  CExpr.hs  CExprGADT.hs  CRepr.hs  FunRepr.hs  Identity.hs  InitSupply.hs  MonoidRepr.hs  PVIE.hs  PVIE_lbfgspp.hs  Prior.hs  ProbFun.hs  ProductRepr.hs  StandardHORepr.hs  Supply.hs  SupplyJointM.hs  TypedExpr.hs  UntypedAST.hs
src/Language/Grappa/Rand/: MWCRandM.hs
src/Language/Haskell/TH/: Compat.hs  GrappaUtil.hs
test/: Main.hs
test/Language/Grappa/Test/: Numeric.hs  Parsing.hs
test/Language/Grappa/Test/Inference/: GradientDescent.hs
