name:                grappa
version:             0.1.0.0
synopsis:            An embedded probabalistic programming language
description:         An embedded probabalistic programming language
license:             BSD3
license-file:        LICENSE
author:              Eddy Westbrook
                   , Getty Ritter
maintainer:          westbrook@galois.com
                   , gdritter@galois.com
copyright:           2018 Galois, Inc.
category:            Language
build-type:          Simple
cabal-version:       >=1.10

-- flag include-graphing
--   description: Compile the bits of the program that require diagrams
--   default: False

flag show-splices
  description: Show the generated Haskell code from Grappa splices
  default: True


-- executable grappa
--   default-language: Haskell2010
--   hs-source-dirs: grappa
--   main-is: Main.hs
--   ghc-options: -O2 -threaded -Wall
--   build-depends: base
--                , filepath
--                , directory
--                , process

executable grappa-c
  default-language: Haskell2010
  hs-source-dirs: grappa-c
  main-is: Main.hs
  ghc-options: -O2 -threaded -Wall
  build-depends: base
               , filepath
               , directory
               , process

executable grappa-build
  default-language: Haskell2010
  hs-source-dirs: grappa-build

  main-is: Main.hs
  ghc-options: -O2 -threaded -Wall

  build-depends: base
               , grappa
               , filepath
               , directory
               , process

library
  exposed-modules:     Language.Grappa

                     -- The modules of Grappa
                     , Language.Grappa.Rand.MWCRandM
                     , Language.Grappa.Distribution
                     -- , Language.Grappa.Model

                     -- Grappa Front-end
                     , Language.Grappa.GrappaInternals
                     , Language.Grappa.Frontend.AST
                     , Language.Grappa.Frontend.Lexer
                     , Language.Grappa.Frontend.Parser
                     , Language.Grappa.Frontend.IngestEmitType
                     , Language.Grappa.Frontend.Resolve
                     , Language.Grappa.Frontend.FixupOps
                     , Language.Grappa.Frontend.TypeCheck
                     -- , Language.Grappa.Frontend.Matching
                     , Language.Grappa.Frontend.Compile
                     -- , Language.Grappa.Frontend.Test
                     , Language.Grappa.Frontend.DataSource
                     , Language.Grappa.Frontend.Errors

                     -- Grappa interpretations
                     , Language.Grappa.Interp
                     , Language.Grappa.Interp.Supply
                     , Language.Grappa.Interp.StandardHORepr
                     , Language.Grappa.Interp.SupplyJointM
                     , Language.Grappa.Interp.InitSupply
                     , Language.Grappa.Interp.ADHORepr
                     , Language.Grappa.Interp.BayesNet
                     , Language.Grappa.Interp.Prior
                     , Language.Grappa.Interp.UntypedAST
                     , Language.Grappa.Interp.MonoidRepr
                     , Language.Grappa.Interp.ProductRepr
                     , Language.Grappa.Interp.FunRepr
                     , Language.Grappa.Interp.TypedExpr
                     , Language.Grappa.Interp.CExpr
                     , Language.Grappa.Interp.CRepr
                     , Language.Grappa.Interp.ProbFun
                     , Language.Grappa.Interp.VIDist

                     -- Inference methods
                     , Language.Grappa.Inference
                     , Language.Grappa.Inference.Util
                     , Language.Grappa.Inference.GradientDescent
                     , Language.Grappa.Inference.HMC
                     , Language.Grappa.Inference.BayesNetInference
                     , Language.Grappa.Inference.CTranslate
                     , Language.Grappa.Inference.PVIE

                     -- misc. utility modules
                     , Language.Haskell.TH.GrappaUtil
  other-modules:       Language.Haskell.TH.Compat
  build-tools:         alex, happy

  build-depends:       base >=4.8 && <4.11
                     , mwc-random >=0.13 && <0.14
                     , primitive >=0.6 && <0.7
                     , mtl >=2.2 && <2.3
                     , log-domain >= 0.11
                     , vector >=0.12 && <0.13
                     , containers
                     , monad-par
                     , abstract-par
                     , alex-tools
                     , layout-rules
                     , template-haskell >= 2.12 && < 2.13
                     , hmatrix
                     , matrix
                     , array
                     , text
                     , cassava
                     , ad
                     , reflection
                     , matrix
                     , bytestring
                     , aeson
                     , ansi-wl-pprint
                     , microtimer
                     , deepseq
                     , ghc-prim
                     , pretty-show
                     , math-functions
                     , directory
                     , language-c
                     , pretty
                     , lens

  -- -- This flag depends on the @variational-inference@ flag, which is
  -- -- handled automatically below.
  -- if flag(variational-inference)
  --   exposed-modules:  Language.Grappa.Inference.VariationalInference
  --   build-depends:    QuickCheck
  --                   , statistics
  --                   , Chart
  --                   , Chart-diagrams
  --                   , lens
  --                   , colour
  --                   , data-default-class

  if flag(show-splices)
    ghc-options: -ddump-splices

  hs-source-dirs:      src
  ghc-options:
    -Wall
    -O2
    "-fconstraint-solver-iterations=10"

  if impl(ghc >= 8)
    default-extensions: UndecidableSuperClasses

  default-language:    Haskell2010

test-suite grappa-tests
  type: exitcode-stdio-1.0
  default-language: Haskell2010
  main-is: Main.hs
  hs-source-dirs: test
  other-modules: Language.Grappa.Test.Parsing
                 Language.Grappa.Test.Numeric
  build-depends: base
               , grappa
               , hspec
               , QuickCheck
               , statistics
               , mwc-random
               , hmatrix
               , alex-tools
               , ad
               , log-domain
